--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Landing Page</title>
   </head>
   <body>
-    <header><img src="./img/logo.png" alt="Logo" /></header>
+    <header><img src="./img/logo.png" alt="Logo" width="200px" /></header>
     <nav>
       <ul>
         <li><a href="#">Início</a></li>
