--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
           <br />
           <label for="txtSexo">Sexo:</label>
           <br />
-          <input type="radio" name="Masculino" id="checkM" />
+          <input type="radio" name="Sexo" id="checkM" />
           <label>Masculino</label>
-          <input type="radio" name="Ferminino" id="checkF" />
+          <input type="radio" name="Sexo" id="checkF" />
           <label>Ferminino</label>
           <br />
           <br />
